--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,10 @@ default: &default
 
 development:
   <<: *default
+  host: localhost
   database: eduty-server_development
+  user: eduty
+  password: eduty
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +61,9 @@ development:
 test:
   <<: *default
   database: eduty-server_test
+  host: localhost
+  user: eduty
+  password: eduty
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
